deploy-artworks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artworks
  labels:
    app: artworks
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artworks
      version: v1
  template:
    metadata:
      labels:
        app: artworks
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: artworks
        image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj13/artworks:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
