deploy-menu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu
  labels:
    app: menu
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu
      version: v1
  template:
    metadata:
      labels:
        app: menu
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: menu
        image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj13/menu:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          runAsUser: 1000
      volumes:
      - name: tmp
        emptyDir: {}
