svc-artworks.yaml
apiVersion: v1
kind: Service
metadata:
  name: artworks
  labels:
    app: artworks
    service: artworks
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: artworks
