svc-menu.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu
  labels:
    app: menu
    service: menu
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: menu
